--- a/_data/sidebars/other.yml
+++ b/_data/sidebars/other.yml
@@ -9,10 +9,10 @@ entries:
     folderitems:
 
     - title: Automated links bookmark
-      url: /mydoc_hyperlinks.html#automatedlinks
+      url: /conform_hyperlinks.html#automatedlinks
 
     - title: Bookmark links
-      url: /mydoc_hyperlinks.html#bookmarklinks
+      url: /conform_hyperlinks.html#bookmarklinks
 
     - title: Some link bookmark
-      url: /mydoc_pages.html#someIdTag
+      url: /conform_pages.html#someIdTag
