Start work on SUBMI section

--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -1,11 +1,11 @@
-jekyll_platform: "Jekyll is a static site generator that builds sites using most modern web technologies."
+ANDA: "Abbreviated New Drug Application"
 
-fractious: "Like a little mischevious child, full of annoying and constant trouble."
+BLA: "Biologic License Application"
 
-gratuitous: "Something that is unwarranted and uncouth, like the social equivalent of a flagrant foul."
+CDER: "Center for Drug Evaluation and Research"
 
-haughty: "Proud and flaunting it. Holding your head high up like a snooty, too-good-for-everything rich person."
+CBER: "Center for Biologics Evaluation and Research" 
 
-impertinent: "Someone acting rude and insensitive to others."
+IND: "Investigational New Drug"
 
-intrepid: "Brave and courageous especially in a difficult, dangerous situation."
+NDA: "New Drug Application"
