dev notes pages

--- a/_data/sidebars/conform_sidebar.yml
+++ b/_data/sidebars/conform_sidebar.yml
@@ -108,3 +108,16 @@ entries:
     - title: Contact Us
       url: /conform_references_contact_us.html
       output: web, pdf
+
+
+- title: Dev Team Notes
+  output: web
+  folderitems:
+
+  - title: Introduction
+    url: /devteam_intro.html
+    output: web
+
+  - title: Randomization and Eligbility
+    url: /devteam_modelNotes.html
+    output: web
