--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -58,9 +58,6 @@ entries:
       url: /conform_send_rules.html
       output: web
 
-
-
-
     - title: SHACL Shapes
       url: /conform_shacl_shapes.html
       output: web, pdf
@@ -118,3 +115,15 @@ entries:
     - title: Contact Us
       url: /conform_references_contact_us.html
       output: web, pdf
+
+- title: Dev Team Notes
+  output: web
+  folderitems:
+
+  - title: Introduction
+    url: /devteam_intro.html
+    output: web
+
+  - title: Randomization and Eligbility
+    url: /devteam_RandAndElig.html
+    output: web
