--- a/_data/sidebars/conform_sidebar.yml
+++ b/_data/sidebars/conform_sidebar.yml
@@ -40,7 +40,7 @@ entries:
 
     - title: Ontology
       url: /conform_ontology.html
-      output: web
+      output: we
 
     - title: SEND Rules
       url: /conform_send_rules.html
@@ -89,7 +89,7 @@ entries:
       output: web, pdf
 
 
- - title: References and Resources - TEST
+  - title: References and Resources -TEST
     output: web
     folderitems:
 
@@ -108,15 +108,3 @@ entries:
     - title: Contact Us
       url: /conform_references_contact_us.html
       output: web, pdf
-
-  - title: Dev Team Notes
-    output: web
-    folderitems:
-
-    - title: Introduction
-      url: /devteam_intro.html
-      output: web
-
-    - title: Randomization and Eligbility
-      url: /devteam_modelNotes.html
-      output: web
