--- a/_data/sidebars/conform_sidebar.yml
+++ b/_data/sidebars/conform_sidebar.yml
@@ -89,7 +89,7 @@ entries:
       output: web, pdf
 
 
-  - title: References and Resources -TEST
+  - title: References and Resources
     output: web
     folderitems:
 
@@ -107,4 +107,16 @@ entries:
 
     - title: Contact Us
       url: /conform_references_contact_us.html
+      output: web, pdf
+
+  - title: Dev Team Notes
+    output: web
+    folderitems:
+
+    - title: Introduction
+      url: /devteam_intro.html
+      output: web
+
+    - title: Randomization and Eligbility
+      url: /devteam_modelNotes.html
       output: web, pdf
