testing new page structure fixes

--- a/_data/sidebars/conform_sidebar.yml
+++ b/_data/sidebars/conform_sidebar.yml
@@ -55,6 +55,15 @@ entries:
       output: web, pdf
 
 
+  - title: TEST
+    output: web, pdf
+    folderitems:
+
+    - title: Data Conversion
+      url: /conform_ontology.html
+      output: web, pdf
+
+
   - title: Submission Conformance
     output: web, pdf
     folderitems:
