--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -6,18 +6,6 @@ entries:
   version:
   folders:
 
-  - title:
-    output: pdf
-    type: frontmatter
-    folderitems:
-    - title:
-      url: /titlepage.html
-      output: pdf
-      type: frontmatter
-    - title:
-      url: /tocpage.html
-      output: pdf
-      type: frontmatter
 
   - title: Introduction
     output: web, pdf
@@ -29,47 +17,51 @@ entries:
       type: homepage
 
     - title: Conventions
-      url: /conform_intro_conventions.html
+      url: /intro_conventions.html
       output: web, pdf
       type: homepage
 
     - title: Graph Data and Validation
-      url: /conform_intro_graph_data_and_validation.html
+      url: /intro_graph_data_and_validation.html
       output: web, pdf
 
     - title: Systems and Applications
-      url: /conform_intro_systems_and_applications.html
+      url: /intro_systems_and_applications.html
       output: web, pdf
 
-
-  - title: SEND Data
-    output: web
+  - title: SEND Data Validation
+    output: web, pdf
     folderitems:
 
     - title: Data Conversion
-      url: /conform_data_conversion.html
-      output: web
+      url: /send_data_conversion.html
+      output: web, pdf
 
     - title: Ontology
-      url: /conform_ontology.html
-      output: web
+      url: /send_ontology.html
+      output: web, pdf
 
     - title: SEND Rules
-      url: /conform_send_rules.html
-      output: web
+      url: /send_send_rules.html
+      output: web, pdf
 
     - title: SHACL Shapes
-      url: /conform_shacl_shapes.html
+      url: /send_shacl_shapes.html
       output: web, pdf
 
     - title: Validation
-      url: /conform_validation.html
+      url: /send_validation.html
       output: web, pdf
 
 
-  - title: Submission
+  - title: Submission Conformance
     output: web, pdf
     folderitems:
+
+    - title: Background and Rationale
+      url: /submit_background_and_rationale.html
+      output: web, pdf
+
 
     - title: Structure and Components
       url: /submit_structure_and_components.html
@@ -101,17 +93,29 @@ entries:
     folderitems:
 
     - title: References and Resources
-      url: /conform_references_and_resources.html
+      url: /ref_references_and_resources.html
       output: web
 
     - title: Project Repository Structure
-      url: /conform_intro_site_structure.html
+      url: /ref_site_structure.html
       output: web, pdf
 
     - title: About This Site
-      url: /conform_references_about_this_site.html
+      url: /ref_about_this_site.html
       output: web
 
     - title: Contact Us
-      url: /conform_references_contact_us.html
+      url: /ref_contact_us.html
+      output: web, pdf
+
+  - title: Dev Team Notes
+    output: web
+    folderitems:
+
+    - title: Introduction
+      url: /devteam_intro.html
+      output: web
+
+    - title: Team Notes
+      url: /devteam_teamnotes.html
       output: web, pdf
